--- a/styles.css
+++ b/styles.css
@@ -29,9 +29,27 @@ body{
     color: #000;
 }
 .buy{
+    position:relative;
+    left: 30%;
+    top: 50%;
     border-radius: 8px;
     padding: 10px 8px 10px 16px;
     width: 376px;
     height: 48px;
     background: rgba(0, 0, 0, 0.56);
+    
+}
+.arrow-icon{
+    animation-name: animation1;
+    animation-duration: 5s;
+    animation-iteration-count: infinite alternate;
+}
+
+@keyframes animation1{
+    from {
+        stroke: red;
+    }
+    to { 
+        stroke: green;
+    }
 }
